[package]
name = "decluster"
edition = "2021"
authors = [
    "Jonny Anderson <jonny@ail.im>"
]
readme = "README.md"
repository = "https://github.com/anderson-international/decluster"
license = "MIT"
keywords = ["nearest-neighbors", "decluster"]
categories = ["algorithms"]
description = "Iteratively declusters and replaces a randomised set of 2D points to find the maximally distributed set."
version = "1.0.1"



[[bin]]
name = "decluster"

[dependencies]
piston = "0.53.1"
piston2d-graphics = "0.42.0"
piston_window = "0.123.0"
rand = "0.8.5"