[package]
name = "decluster"
edition = "2021"
authors = ["Jonny Anderson <jonny@ail.im>"]
readme = "README.md"
repository = "https://github.com/anderson-international/decluster"
license = "MIT"
keywords = ["nearest-neighbors", "decluster"]
categories = ["algorithms"]
description = "Iteratively declusters and replaces a randomised set of 2D points until a set is discovered where each point is separated by at least the specified minimum distance."
version = "1.0.16"

[[example]]
name = "decluster_demo"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
piston = "0.53.1"
piston2d-graphics = "0.42.0"
piston_window = "0.123.0"
rand = "0.8.5"